// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavItem Component renders alone 1`] = `
<div>
  <div
    class="item"
    data-testid="DATA-TEST-ID"
  >
    <i
      class="icon"
      icon="fal,icons"
    />
    <div
      class="label"
    >
      LABEL
    </div>
    <span
      class="default pill danger counter"
    >
      1
    </span>
    <i
      class="icon caret"
      icon="fas,caret-down"
    />
  </div>
  <div>
    <div>
      ControlleMenu
      closed
      <div
        data-testid="CUSTOM-SUB-ITEM"
      />
      has no ref
    </div>
  </div>
</div>
`;

exports[`NavItem Component renders alone 2`] = `
<div>
  <div
    class="item"
    data-testid="DATA-TEST-ID"
  >
    <i
      class="icon"
      icon="fal,icons"
    />
    <div
      class="label"
    >
      LABEL
    </div>
    <span
      class="default pill danger counter"
    >
      1
    </span>
    <i
      class="icon caret"
      icon="fas,caret-down"
    />
  </div>
  <div>
    <div>
      ControlleMenu
      open
      <div
        data-testid="CUSTOM-SUB-ITEM"
      />
      has no ref
    </div>
  </div>
</div>
`;

exports[`NavItem Component renders alone 3`] = `
<div>
  <div
    class="item"
    data-testid="DATA-TEST-ID"
  >
    <i
      class="icon"
      icon="fal,icons"
    />
    <div
      class="label"
    >
      LABEL
    </div>
    <span
      class="default pill danger counter"
    >
      1
    </span>
    <i
      class="icon caret"
      icon="fas,caret-down"
    />
  </div>
  <div>
    <div>
      ControlleMenu
      closed
      <div
        data-testid="CUSTOM-SUB-ITEM"
      />
      has no ref
    </div>
  </div>
</div>
`;

exports[`NavItem Component renders handles counter as digits 1`] = `
<div>
  <div
    class="item"
  >
    <i
      class="icon"
      icon="fal,icons"
    />
    <div
      class="label"
    >
      LABEL
    </div>
    <span
      class="default pill danger counter"
    >
      +99
    </span>
  </div>
</div>
`;

exports[`NavItem Component renders handles counter as string 1`] = `
<div>
  <div
    class="item"
  >
    <i
      class="icon"
      icon="fal,icons"
    />
    <div
      class="label"
    >
      LABEL
    </div>
    <span
      class="default pill danger counter"
    >
      test
    </span>
  </div>
</div>
`;

exports[`NavItem Component renders with subitems 1`] = `
<div>
  <div
    class="item"
    data-testid="DATA-TEST-ID"
  >
    <div
      class="label"
    >
      ITEM
    </div>
    <i
      class="icon caret"
      icon="fas,caret-down"
    />
  </div>
  <div>
    <div>
      ControlleMenu
      closed
      <a
        href="#"
      >
        partial url
        <div
          data-testid="SUBITEMDATA-TEST-ID"
        >
          MenuItem
          SUBITEM
        </div>
      </a>
      has no ref
    </div>
  </div>
</div>
`;

exports[`NavItem Component renders with subitems 2`] = `
<div>
  <div
    class="item"
    data-testid="DATA-TEST-ID"
  >
    <div
      class="label"
    >
      ITEM
    </div>
    <i
      class="icon caret"
      icon="fas,caret-down"
    />
  </div>
  <div>
    <div>
      ControlleMenu
      open
      <a
        href="#"
      >
        partial url
        <div
          data-testid="SUBITEMDATA-TEST-ID"
        >
          MenuItem
          SUBITEM
        </div>
      </a>
      has no ref
    </div>
  </div>
</div>
`;

exports[`NavItem Component renders with subitems 3`] = `
<div>
  <div
    class="item"
    data-testid="DATA-TEST-ID"
  >
    <div
      class="label"
    >
      ITEM
    </div>
    <i
      class="icon caret"
      icon="fas,caret-down"
    />
  </div>
  <div>
    <div>
      ControlleMenu
      open
      <a
        href="#"
      >
        partial url
        <div
          data-testid="SUBITEMDATA-TEST-ID"
        >
          MenuItem
          SUBITEM
        </div>
      </a>
      has no ref
    </div>
  </div>
</div>
`;

exports[`NavItem Component renders with subitems 4`] = `
<div>
  <div
    class="item"
    data-testid="DATA-TEST-ID"
  >
    <div
      class="label"
    >
      ITEM
    </div>
    <i
      class="icon caret"
      icon="fas,caret-down"
    />
  </div>
  <div>
    <div>
      ControlleMenu
      closed
      <a
        href="#"
      >
        partial url
        <div
          data-testid="SUBITEMDATA-TEST-ID"
        >
          MenuItem
          SUBITEM
        </div>
      </a>
      has no ref
    </div>
  </div>
</div>
`;
